--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.10.0",
     "cors": "^2.8.5",
-    "multer": "^1.4.5",
+    "multer": "^1.4.5-lts.1",
     "express-validator": "^6.14.3",
     "uuid": "^9.0.0"
   },
