--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "firebase-admin": "^11.10.0",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
     "express-validator": "^6.14.3",
+    "firebase-admin": "^11.10.0",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
