--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
